# midjourney-api

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  discord_ids.csv  setup.cfg
src/vapi/: BotMidJourney.py  ConfigMidJourney.py  api_main.py  bot_main.py  bot_main_dev.py  main.py  settings.py  utils.py  wiring.py
src/vapi/api/: dto.py  endpoint.py
src/vapi/application/: __init__.py  foundation.py
src/vapi/application/domain/: task.py
src/vapi/application/service/: captcha_service.py  queue_service.py
src/vapi/infrastructure/: __init__.py  counters.py  redis_base.py
src/vapi/infrastructure/service/: discord_bot.py  redis_queue_service.py  temp_patch_code.py  twocaptchas_service.py
tests/: test_disc_bot.py  test_img_captcha.py
